--- a/project/wym_project/web/test.html
+++ b/project/wym_project/web/test.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <meta name="description" content="Sidebar Transitions: Transition effects for off-canvas views" />
-    <meta name="keywords" content="transition, off-canvas, navigation, effect, 3d, css3, smooth" />
+
     <meta name="author" content="Codrops" />
-    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/icons.css" /> -->
@@ -16,7 +14,7 @@
 
     <style>
         .top-banner a {
-            color:wheat;
+            color:green !important;
             text-shadow: none;
         }
         .column {
@@ -36,13 +34,14 @@
         these menus will be on top of the push wrapper
     -->
     <nav class="st-menu st-effect-1" id="menu-1">
-        <h2 class="icon icon-lab">菜单栏</h2>
+        <h2 class="icon icon-lab">游客注册</h2>
         <ul>
-            <li><a class="icon icon-data" href="#">Data Management</a></li>
-            <li><a class="icon icon-location" href="#">Location</a></li>
-            <li><a class="icon icon-study" href="#">Study</a></li>
-            <li><a class="icon icon-photo" href="#">Collections</a></li>
-            <li><a class="icon icon-wallet" href="#">Credits</a></li>
+                <form action="regiest" method="post">
+                    <li>账号：<input name="name" required><br/></li>
+                    <li>密码：<input name="pass" required><br/></li>
+                    <li><input type="submit" value="提交"></li>
+                </form>
+
         </ul>
     </nav>
     <!-- content push wrapper -->
@@ -58,7 +57,7 @@
                 </header>
                 <div class="main clearfix">
                     <div id="st-trigger-effects" class="column">
-                        <button data-effect="st-effect-1">效果一</button>
+                        <button data-effect="st-effect-1">注册</button>
                     </div>
                 </div><!-- /main -->
                 <div class="footer-banner" style="width:728px; margin:160px auto 0"></div>
